[profile.release]
debug = true

[workspace]
members = [
  "components/builder-api",
  "components/builder-core",
  "components/builder-db",
  "components/builder-graph",
  "components/builder-jobsrv",
  "components/builder-protocol",
  "components/builder-worker",
  "components/github-api-client",
  "components/oauth-client",
  "components/segment-api-client"
]
