[profile.release]
debug = true

[workspace]
members = [
  "components/artifactory-client",
  "components/builder-api",
  "components/builder-core",
  "components/builder-db",
  "components/builder-events",
  "components/builder-graph",
  "components/builder-jobsrv",
  "components/builder-notify",
  "components/builder-protocol",
  "components/builder-worker",
  "components/github-api-client",
  "components/oauth-client",
]
