[package]
name = "airlock"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[lib]
name = "airlock"

[[bin]]
name = "airlock"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "*", features = ["suggestions", "color", "unstable"] }
dirs = "*"
env_logger = "*"
errno = "*"
libc = "0.2.42"
log = "*"
pnet_datalink = "*"
rand = "*"
unshare = "0.4.0"
users = "0.7.0"
