[package]
name = "artifactory-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
log = "*"
futures = "*"
serde = "*"
serde_derive = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"
tag = "1.6.39"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.tokio]
version = "*"
features = ["fs"]

[dependencies.reqwest]
version = "*"
features = ["stream"]
