[package]
name = "artifactory-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
log = "*"
futures = "*"
serde = "*"
serde_derive = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.tokio]
version = "*"
features = ["fs"]

[dependencies.reqwest]
version = "^0.10.10"
features = ["stream"]
