[package]
name = "habitat_builder_api"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
actix = "*"
bytes = "*"
base64 = "*"
bitflags = "1"
clippy = {version = "*", optional = true}
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
env_logger = "*"
features = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
hex = "*"
hyper = "0.10.3"
lazy_static = "*"
log = "*"
memcache = "*"
num_cpus = "*"
openssl = "0.10"
protobuf = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
toml = { version = "*", default-features = false }
futures = "0.1"
rand = "*"
r2d2 = "*"
regex = "*"
rusoto_core = "0.32.0"
rusoto_s3 = "0.32.0"
tempfile = "*"
time = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.actix-web]
version = "*"
default-features = false

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.segment-api-client]
path = "../segment-api-client"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_http_client]
git = "https://github.com/habitat-sh/core.git"

[dependencies.habitat_builder_db]
path = "../builder-db"
