[package]
name = "habitat_builder_api"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat-Builder HTTP API gateway"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-api"
path = "src/main.rs"
doc = false

[dependencies]
actix-rt = "*"
bytes = "*"
base64 = "*"
bitflags = "1"
clippy = {version = "*", optional = true}
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
env_logger = "*"
features = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
hex = "*"
lazy_static = "*"
log = "*"
num_cpus = "*"
openssl = "=0.10.22"
percent-encoding = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
toml = { version = "*", default-features = false }
futures = "*"
rand = "*"
r2d2 = "*"
regex = "*"
rusoto_core = "*"
rusoto_s3 = "*"
tempfile = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.memcache]
version = "*"
git = "https://github.com/stevendanna/rust-memcache.git"
branch = "ssd/avoid-short-writes"

[dependencies.actix-web]
version = "*"
default-features = false
features = [ "openssl" ]

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/habitat-sh/rust-zmq"
branch = "v0.8-symlinks-removed"

[dependencies.artifactory-client]
path = "../artifactory-client"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_builder_db]
path = "../builder-db"

[dependencies.reqwest]
version = "*"
features = ["blocking"]
