[package]
name = "builder_core"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
bitflags = "*"
chrono = { version = "*", features = ["serde"] }
dogstatsd = "0.6"
env_proxy = "*"
glob = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
log = "*"
protobuf = "3"
serde = "*"
serde_derive = "*"
serde_json = "*"
toml = { version = "*", default-features = false }
url = "*"
zmq = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.reqwest]
version = "*"
features = ["stream", "query"]

[dev-dependencies]
tempfile = "*"

[package.metadata.cargo-machete]
ignored = ["zmq"]
