[package]
name = "habitat_builder_db"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Database Library"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
habitat-builder-protocol = { path = "../builder-protocol" }
log = "*"
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
r2d2 = "*"
time = "*"
rand = "*"
serde = "*"
chrono = { version = "*", features = ["serde"] }
serde_derive = "*"
num_cpus = "*"
protobuf = "*"
fnv = "*"
fallible-iterator = "*"
postgres = "*"
postgres-derive = "*"
postgres-shared = "*"
r2d2_postgres = "*"
threadpool = "*"
url = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"

[dependencies.habitat_net]
path = "../net"
