[package]
name = "habitat_builder_db"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat-Builder Database Library"
workspace = "../../"
edition = "2018"

[dependencies]
clippy = {version = "*", optional = true}
habitat-builder-protocol = { path = "../builder-protocol" }
log = "*"
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_full_text_search = "*"
diesel_migrations = "*"
r2d2 = "*"
rand = "*"
serde = "*"
chrono = { version = "*", features = ["serde"] }
serde_derive = "*"
num_cpus = "*"
protobuf = "*"
fnv = "*"
fallible-iterator = "*"
percent-encoding = "*"
postgres = "0.15.2"
postgres-derive = "0.3.3"
postgres-shared = "*"
r2d2_postgres = "0.14.0"
threadpool = "*"
url = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.builder_core]
path = "../builder-core"
