[package]
name = "habitat_builder_events"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat-Builder EventBus library"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[dependencies]
async-trait = "*"
cloudevents-sdk = { version = "*", features = ["rdkafka"] }
features = "*"
lazy_static = "*"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = "*"
url = "*"
uuid = { version = "*", features = ["v4"] }

[dependencies.rdkafka]
version = "*"
features = ["ssl"]

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"
