[package]
name = "habitat_builder_graph"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat-Builder Graph Dev Tool"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-graph"
path = "src/main.rs"
doc = false

[dependencies]
bitflags = "*"
clippy = {version = "*", optional = true}
features = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
log = "*"
env_logger = "*"
petgraph = "*"
walkdir = "*"
libarchive = "*"
clap = "2"
protobuf = "*"
postgres = "0.15.2"
r2d2 = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
copperline = "*"
diesel = "*"
regex = "*"
lazy_static = "*"
itertools = "*"
tempfile = "*" 

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_builder_db]
path = "../builder-db"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
