[package]
name = "builder-http-gateway"
version = "0.0.0"
authors = ["Jamie Winsor <reset@habitat.sh"]
description = "A library for implementing Builder HTTP Gateways"
workspace = "../../"

[dependencies]
base64 = "*"
bodyparser = "*"
builder_core = { path = "../builder-core" }
env_logger = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
habitat_depot_client = { git = "https://github.com/habitat-sh/habitat.git" }
habitat_net = { path = "../net" }
hyper = "0.10"
iron = "*"
log = "*"
mount = "*"
num_cpus = "*"
params = "*"
persistent = "*"
protobuf = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
staticfile = "*"
toml = { version = "*", default-features = false }
# JW: Lock to 1.x until we can upgrade Hyper past 10.x
unicase = "1"
# JW TODO: Switch back to crates version once an updated version is published to crates.io
# which leverages the latest version of bodyparser
urlencoded = { version = "*", git = "https://github.com/iron/urlencoded" }

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"

[dependencies.oauth-client]
path = "../oauth-client"

[dependencies.github-api-client]
path = "../github-api-client"

[dependencies.segment-api-client]
path = "../segment-api-client"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"
