[package]
name = "habitat_builder_jobsrv"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat-Builder Job Server"
build = "../build-builder.rs"
workspace = "../../"
edition = "2018"

[[bin]]
name = "bldr-jobsrv"
path = "src/main.rs"
doc = false

[dependencies]
backtrace = "*"
bitflags = "*"
builder_core = { path = "../builder-core" }
clippy = {version = "*", optional = true}
chrono = { version = "*", features = ["serde"] }
diesel = { version = "*", features = ["postgres", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "*", features = ["postgres"] }
diesel_migrations = "*"
features = "*"
futures = "0.1"
rusoto_core = "*"
rusoto_s3 = "*"
env_logger = "*"
habitat_builder_db = { path = "../builder-db" }
habitat-builder-protocol = { path = "../builder-protocol" }
linked-hash-map = "*"
log = "*"
num_cpus = "*"
protobuf = "*"
postgres = { version = "*", features = ["with-chrono"] }
postgres-derive = "0.3.3"
rand = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
sha2 = "*"
toml = { version = "*", default-features = false }

[dependencies.actix-web]
version = "*"
default-features = false

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.zmq]
git = "https://github.com/habitat-sh/rust-zmq"
branch = "v0.8-symlinks-removed"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"
