[package]
name = "habitat-builder-protocol"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
clippy = { version = "*", optional = true }
fnv = "*"
# Pin until we are on Rust >= 1.44.0
protobuf = "= 2.14.0"
serde = "*"
serde_derive = "*"
regex = "*"
lazy_static = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[build-dependencies]
pkg-config = "0.3"
protoc = "*"
# Pin until we are on Rust >= 1.44.0
protoc-rust = "= 2.14.0"
protobuf-codegen = "*"
