[package]
name = "habitat-builder-protocol"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
fnv = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
regex = "*"
lazy_static = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[build-dependencies]
pkg-config = "0.3"
protoc = "*"
protoc-rust = "*"
protobuf-codegen = "*"
