[package]
name = "habitat-builder-protocol"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "Habitat Builder Network Server Protocol"
build = "build.rs"
workspace = "../../"
edition = "2018"

[dependencies]
protobuf = "*"
serde = "*"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[build-dependencies]
protoc-rust = "*"

[package.metadata.cargo-machete]
ignored = ["protoc-rust"]
