[package]
name = "habitat_builder_sessionsrv"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
description = "Habitat-Builder Session Server"
build = "../build-builder.rs"
workspace = "../../"

[[bin]]
name = "bldr-sessionsrv"
path = "src/main.rs"
doc = false

[dependencies]
base64 = "*"
clippy = {version = "*", optional = true}
bitflags = "*"
env_logger = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
hyper = "0.10"
lazy_static = "*"
log = "*"
postgres = { version = "*", features = ["with-chrono"] }
chrono = { version = "*", features = ["serde"] }
protobuf = "*"
r2d2 = "*"
serde = "*"
serde_derive = "*"
time = "*"
toml = { version = "*", default-features = false }
diesel = "*"
diesel_migrations = "*"

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.github-api-client]
git = "https://github.com/habitat-sh/habitat.git"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.habitat_builder_db]
path = "../builder-db"

[dependencies.habitat_net]
path = "../net"

[dependencies.zmq]
git = "https://github.com/erickt/rust-zmq"
branch = "release/v0.8"
