[package]
name = "github-api-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
frank_jwt = "*"
reqwest = "0.8.1"
log = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
time = "*"

# For metrics library
[dependencies.builder_core]
path = "../builder-core"
