[package]
name = "github-api-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
env_proxy = "*"
frank_jwt = "*"
log = "*"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "*"

[dependencies.builder_core]
path = "../builder-core"

[dependencies.reqwest]
version = "*"
features = ["blocking"]
