[package]
name = "habitat_net"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
workspace = "../../"

[dependencies]
clippy = { version = "*", optional = true }
bitflags = "*"
habitat-builder-protocol = { path = "../builder-protocol" }
lazy_static = "*"
protobuf = "*"
serde = "*"
serde_derive = "*"
zmq = { git = "https://github.com/erickt/rust-zmq", branch = "release/v0.8" }

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"
