[package]
name = "oauth-client"
version = "0.0.0"
authors = ["Josh Black <raskchanky@gmail.com>"]
description = "OAuth Client"
workspace = "../../"
edition = "2018"

[dependencies]
log = "*"
reqwest = "0.8.1"
serde = "*"
serde_derive = "*"
serde_json = "*"
env_proxy = "*"
url = "*"

# For metrics library
[dependencies.builder_core]
path = "../builder-core"
