[package]
name = "oauth-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
description = "OAuth Client"
workspace = "../../"
edition = "2018"

[dependencies]
async-trait = "*"
log = "*"
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "*"

[dependencies.builder_core]
path = "../builder-core"

