[package]
name = "op"
version = "0.1.0"
authors = ["Josh Black <raskchanky@gmail.com>"]
description = "Operational tools for Habitat developers"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
fnv = "*"
log = "*"
habitat-builder-protocol = { git = "https://github.com/habitat-sh/protocols.git" }
habitat_builder_sessionsrv = { path = "../builder-sessionsrv" }

[dependencies.clap]
version = "*"
features = [ "suggestions", "color", "unstable" ]

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/core.git"

[features]
default = []
