[package]
name = "segment-api-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
env_proxy = "*"
reqwest = "0.8.1"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "*"

[[bin]]
name = "segment-client"
path = "src/main.rs"
