[package]
name = "segment-api-client"
version = "0.0.0"
authors = ["The Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"

[dependencies]
base64 = "*"
reqwest = "=0.9.17"
log = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
url = "*"

[dependencies.builder_core]
path = "../builder-core"

[[bin]]
name = "segment-client"
path = "src/main.rs"
