[package]
name = "token-generator"
version = "0.0.0"
authors = ["Habitat Maintainers <humans@habitat.sh>"]
workspace = "../../"
edition = "2018"
description = "Standalone CLI tool to generate user authentication tokens"

[dependencies]
builder_core = { path = "../../components/builder-core" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[dependencies.habitat_core]
git = "https://github.com/habitat-sh/habitat.git"

[[bin]]
name = "token-generator"
path = "src/main.rs"